# wcs-python-client

./: .buildinfo  .gitignore  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pylint.sh  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/wcs/: index.doctree
.doctrees/autoapi/wcs/model/: index.doctree
.doctrees/autoapi/wcs/parser/: index.doctree
.doctrees/autoapi/wcs/service/: index.doctree
.github/workflows/: build-and-deploy-docs.yml  release.yml
_modules/: index.html
_modules/wcs/: model.html  parser.html  service.html
_sources/: README.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/wcs/: index.rst.txt
_sources/autoapi/wcs/model/: index.rst.txt
_sources/autoapi/wcs/parser/: index.rst.txt
_sources/autoapi/wcs/service/: index.rst.txt
autoapi/: index.html
autoapi/wcs/: index.html
autoapi/wcs/model/: index.html
autoapi/wcs/parser/: index.html
autoapi/wcs/service/: index.html
docs/: conf.py  index.rst
tests/: __init__.py  test_model.py  test_parser.py  test_service.py
wcs/: __init__.py  model.py  parser.py  service.py
